--- a/src/main/res/layout/fragment_analyze.xml
+++ b/src/main/res/layout/fragment_analyze.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".AnalyzeFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Analyze Fragment"
-        android:textSize="25dp"
-        android:layout_centerInParent="true"/>
+    <com.anychart.AnyChartView
+        android:id="@+id/any_chart_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 
 </RelativeLayout>
