--- a/src/main/res/layout/fragment_analyze.xml
+++ b/src/main/res/layout/fragment_analyze.xml
@@ -11,5 +11,11 @@
         android:layout_height="match_parent"
         />
 
+    <TextView
+        android:id="@+id/pieLegend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"/>
+
 
 </RelativeLayout>
