History frag update
Updated history fragment, it now refreshes every time a new time span is selected from a spinner.

The transactions list now filters the transactions by date.

Added button to settings menu that adds a dummy file with 3 transactions.

--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsFragment">
+    tools:context=".SettingsFragment"
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <TextView
+    <Button
+        android:id="@+id/deleteBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings Fragment"
-        android:textSize="25dp"
-        android:layout_centerInParent="true"/>
+        android:textSize="25sp"
+        android:text="Delete all transactions" />
 
+    <Button
+        android:id="@+id/addDummy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="Add dummy transactions file" />
 
-</RelativeLayout>
+</LinearLayout>
