--- a/src/main/res/layout/fragment_history.xml
+++ b/src/main/res/layout/fragment_history.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryFragment">
+    android:orientation="vertical"
+    tools:context=".HistoryFragment"
+    android:gravity="center_horizontal">
 
     <TextView
         android:id="@+id/recyclerview_title"
@@ -24,6 +26,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Spinner
+        android:id="@+id/timeSelectorSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/timeList"
+        />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="409dp"
@@ -35,4 +45,4 @@
         app:layout_constraintTop_toBottomOf="@+id/recyclerview_title" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
