--- a/src/main/res/layout/fragment_history.xml
+++ b/src/main/res/layout/fragment_history.xml
@@ -16,15 +16,11 @@
         android:layout_marginTop="32dp"
         android:text="Transakcje"
         android:textAllCaps="true"
+        android:layout_marginBottom="10dp"
 
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        />
 
     <Spinner
         android:id="@+id/timeSelectorSpinner"
