--- a/src/main/res/layout/list_item.xml
+++ b/src/main/res/layout/list_item.xml
@@ -11,9 +11,9 @@
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:layout_weight="1"
         android:text="To jest próba"
+        android:padding="5dp"
         android:textColor="@color/black"
         android:textSize="16dp"
         android:textStyle="bold" />
@@ -22,10 +22,8 @@
         android:id="@+id/tvAmount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
         android:layout_weight="1"
+        android:padding="5dp"
         android:text="To jest próba"
         android:textColor="@color/black"
         android:textSize="16dp"
@@ -35,7 +33,7 @@
         android:id="@+id/tvDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:padding="5dp"
         android:layout_weight="1"
         android:gravity="end"
         android:text="To jest próba"
@@ -47,8 +45,8 @@
         android:id="@+id/tvSavedDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:layout_weight="1"
+        android:padding="5dp"
         android:gravity="end"
         android:text="To jest próba"
         android:textColor="@color/black"
