--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -21,4 +21,17 @@
         android:textSize="25sp"
         android:text="Add dummy transactions file" />
 
+    <Button
+        android:id="@+id/buttonSQL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="Connect to Cloud SQL"/>
+
+    <TextView
+        android:id="@+id/testTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"/>
+
 </LinearLayout>
