--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#32C638</color>
+    <color name="red">#FB473A</color>
+    <color name="balanceGreen">#43A047</color>
 </resources>
