History migration to firestore

--- a/src/main/res/layout/fragment_home.xml
+++ b/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="300 zł"
+            android:text="Refreshing"
             android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="300 zł"
+                    android:text="Refreshing"
                     android:textColor="@color/red"
                     android:textSize="26dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +128,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="600 zł"
+                        android:text="Refreshing"
                         android:textColor="@color/balanceGreen"
                         android:textSize="26dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -142,6 +142,11 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+<!--    <Button-->
+<!--        android:id="@+id/refreshBtn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Refresh"/>-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_transaction_btn"
         android:layout_width="wrap_content"
