--- a/src/main/res/layout/fragment_history.xml
+++ b/src/main/res/layout/fragment_history.xml
@@ -22,12 +22,60 @@
         android:textStyle="bold"
         />
 
-    <Spinner
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time: "
+            android:textSize="20sp"/>
+
+        <Spinner
         android:id="@+id/timeSelectorSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/timeList"
         />
+
+    </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category: "
+            android:textSize="20sp"/>
+
+        <Spinner
+            android:id="@+id/catSelectorSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/timeList"
+            />
+
+    </LinearLayout>
+    </LinearLayout>
+    <Button
+        android:layout_marginTop="10dp"
+        android:id="@+id/applyFiltersBtn"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:text="Apply Filters"/>
+
 
 
     <androidx.recyclerview.widget.RecyclerView
