--- a/src/main/res/layout/fragment_analyze.xml
+++ b/src/main/res/layout/fragment_analyze.xml
@@ -19,4 +19,12 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+
+    <Button
+        android:id="@+id/chartRefBth1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Load details"
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
